--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Online courses</title>
 </head>
 <body>
-    hello
+    <div class="wrapper">
+        <div class="side-menu"></div>
+        <div class="main-column"></div>
+        <div class="right-column"></div>
+    </div>
 </body>
 </html>
