Create hello block

--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="side-menu"></div>
-        <div class="main-column"></div>
+        <div class="side-menu">
+            <span class="logo">F.</span>
+            <div class="menu">
+                <a href="" class="menu__item"><img src="./src/img/home.svg" alt=""></a>
+                <a href="" class="menu__item"><img src="./src/img/study.svg" alt=""></a>
+                <a href="" class="menu__item"><img src="./src/img/profile.svg" alt=""></a>
+                <a href="" class="menu__item"><img src="./src/img/message.svg" alt=""></a>
+                <a href="" class="menu__item"><img src="./src/img/settings.svg" alt=""></a>
+                <a href="" class="menu__item"><img src="./src/img/out.svg" alt=""></a>
+            </div>
+        </div>
+        <div class="main-column">
+            <div class="hello">
+                <div class="hello__text">
+                    <h1>Hello Josh!</h1>
+                    <p>It`s good to see you again.</p>
+                </div>
+                <div class="hello__img"><img src="./src/img/Illustration.svg" alt="" height="175" width="191"></div>
+            </div>
+            <div class="continue"></div>
+            <div class="courses"></div>
+        </div>
         <div class="right-column"></div>
     </div>
 </body>
