Create last course block

--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
                 </div>
                 <div class="hello__img"><img src="./src/img/Illustration.svg" alt="" height="175" width="191"></div>
             </div>
-            <div class="continue"></div>
+            <div class="continue">
+                <div class="continue__last">
+                    <div class="course-card">
+                        <div class="card__img"><img src="./src/img/spanish.svg" alt=""></div>
+                        <div class="card__disc">
+                            <h3>Spanish B2</h3>
+                            <p>by Alejandro Velazquez</p>
+                        </div>
+                        <span class="progress">83%</span>
+                        <div class="btn_black">Continue</div>
+                    </div>
+                </div>
+                <div class="select-block">hui</div>
+            </div>
             <div class="courses"></div>
         </div>
         <div class="right-column"></div>
