--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
                             <p>by Alejandro Velazquez</p>
                         </div>
                         <span class="progress">83%</span>
-                        <div class="btn_black">Continue</div>
+                        <div class="btn_black clickable">Continue</div>
                     </div>
                 </div>
-                <div class="select-block">hui</div>
+                <div class="select-block">
+                    <div class="round clickable"><img src="./src/img/left.svg" alt=""></div>
+                    <div class="round clickable"><img src="./src/img/right.svg" alt=""></div>
+                </div>
             </div>
             <div class="courses"></div>
         </div>
