Create block for some courses

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <p>by Alejandro Velazquez</p>
                         </div>
                         <span class="progress">83%</span>
-                        <div class="btn_black clickable">Continue</div>
+                        <div class="btn btn_black clickable">Continue</div>
                     </div>
                 </div>
                 <div class="select-block">
@@ -45,7 +45,60 @@
                     <div class="round clickable"><img src="./src/img/right.svg" alt=""></div>
                 </div>
             </div>
-            <div class="courses"></div>
+            <div class="courses">
+                <h2>Courses</h2>
+                <div class="courses-list">
+                    <ul>
+                        <li class="active clickable">All courses</li>
+                        <li class="clickable">The newest</li>
+                        <li class="clickable">Top Rated</li>
+                        <li class="clickable">Most popular</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <div class="card__item">
+                        <div class="card__img"><img src="./src/img/spanish.svg" alt=""></div>
+                        <div class="card__disc">
+                            <h3>Spanish B2</h3>
+                            <p>by Alejandro Velazquez</p>
+                        </div>
+                        <span class="card__info"><img src="./src/img/clock.svg" alt="" height="16" width="16"> 6h 30min</span>
+                        <span class="card__info"><img src="./src/img/fire.svg" alt="" height="16" width="16"> 4,9</span>
+                        <div class="btn btn_light">View course</div>
+                    </div>
+                    <div class="card__item">
+                        <div class="card__img"><img src="./src/img/spanish.svg" alt=""></div>
+                        <div class="card__disc">
+                            <h3>Spanish B2</h3>
+                            <p>by Alejandro Velazquez</p>
+                        </div>
+                        <span class="card__info"><img src="./src/img/clock.svg" alt="" height="16" width="16"> 6h 30min</span>
+                        <span class="card__info"><img src="./src/img/fire.svg" alt="" height="16" width="16"> 4,9</span>
+                        <div class="btn btn_light">View course</div>
+                    </div>
+                    <div class="card__item">
+                        <div class="card__img"><img src="./src/img/spanish.svg" alt=""></div>
+                        <div class="card__disc">
+                            <h3>Spanish B2</h3>
+                            <p>by Alejandro Velazquez</p>
+                        </div>
+                        <span class="card__info"><img src="./src/img/clock.svg" alt="" height="16" width="16"> 6h 30min</span>
+                        <span class="card__info"><img src="./src/img/fire.svg" alt="" height="16" width="16"> 4,9</span>
+                        <div class="btn btn_light">View course</div>
+                    </div>
+                    <div class="card__item">
+                        <div class="card__img"><img src="./src/img/spanish.svg" alt=""></div>
+                        <div class="card__disc">
+                            <h3>Spanish B2</h3>
+                            <p>by Alejandro Velazquez</p>
+                        </div>
+                        <span class="card__info"><img src="./src/img/clock.svg" alt="" height="16" width="16"> 6h 30min</span>
+                        <span class="card__info"><img src="./src/img/fire.svg" alt="" height="16" width="16"> 4,9</span>
+                        <div class="btn btn_light">View course</div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
         <div class="right-column"></div>
     </div>
