Create search bar and profile

--- a/index.html
+++ b/index.html
@@ -96,11 +96,29 @@
                         <span class="card__info"><img src="./src/img/fire.svg" alt="" height="16" width="16"> 4,9</span>
                         <div class="btn btn_light">View course</div>
                     </div>
-                    
                 </div>
             </div>
         </div>
-        <div class="right-column"></div>
+        <div class="right-column">
+            <div class="utility">
+                <div class="search">
+                    <button><img src="./src/img/search.svg" alt=""></button>
+                    <input type="text" placeholder="Search course">
+                </div>
+                <div class="notification">
+                    <img src="./src/img/notifacation.svg" alt="">
+                </div>
+                <div class="profile">
+                    <img src="./src/img/avatar.svg" alt=""><img class="more" src="./src/img/down.svg" alt="">
+                </div>
+            </div>
+            <div class="course-info">
+                <div class="course-info__card">11</div>
+                <div class="course-info__card">4</div>
+            </div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 </body>
 </html>
